--- a/drive-test.css
+++ b/drive-test.css
@@ -1,47 +1,29 @@
-html, body {
-  height: 100%;
+label{
+  color:#130468;
 }
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background: #252429;
+.input-field label{
+  color:#130468;
 }
-
-*:before,
-*:after {
-  box-sizing: inherit;
+body{
+  background-color:#59becc;
+  line-height: .75;
 }
-
-html {
-  box-sizing: border-box;
-  padding: 20px;
+.tejas-logo{
+   height:40px;
+   width:100px;
 }
-
-.line-chart {
-  -webkit-animation: fadeIn 600ms cubic-bezier(0.57, 0.25, 0.65, 1) 1 forwards;
-          animation: fadeIn 600ms cubic-bezier(0.57, 0.25, 0.65, 1) 1 forwards;
-  opacity: 0;
-  max-width: 640px;
-  width: 100%;
+.heading{
+  color:#130468;
+  font-weight: bold;
 }
-
-.aspect-ratio {
-  height: 0;
-  padding-bottom: 50%;
+.card-background{
+  background-color: #9dccf2;
 }
-
-@-webkit-keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
+.tab{
+  background-color: #bde9f9;
 }
-
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
+.btn{
+  text-transform: capitalize;
+  font-size: 13px;
+  text-align: center;
 }
